add some test