@@ -9,7 +9,7 @@ public class BigObjectTest {
 
     private static final int _1MB = 1024 * 1024;
     /**
-     * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC
+     * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:+UseSerialGC
      * -XX:PretenureSizeThreshold=3145728
      */
     public static void testPretenureSizeThreshold() {
